fix-message : dark-mode hero-bg (not showing)[show's on laptop browser but not mobile phone]

--- a/style-dark.css
+++ b/style-dark.css
@@ -9,8 +9,8 @@
   }
 
   .header {
-    background: top center/cover no-repeat fixed;
-    background-image: url(./assets/img/hero-dark.webp);
+    background: top left/cover no-repeat;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.8)), url(./assets/img/hero-dark.webp);
   }
 
   @media (min-width: 768px) {
@@ -18,9 +18,6 @@
       background: top center/cover no-repeat;
       background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.8)),
         url(./assets/img/hero-dark.webp);
-    }
-    .header-container {
-      text-align: left;
     }
   }
 
