--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ button:focus {
   align-items: center;
   padding: 0 10%;
   margin: 0%;
+
 }
 
 .header-container {
@@ -242,6 +243,7 @@ button:focus {
 
 .header-container > h1 {
   color: var(--color-white) !important;
+  margin-bottom: 2.5%;
 }
 
 @media (min-width: 768px) {
@@ -254,7 +256,7 @@ button:focus {
       url(./assets/img/hero.webp);
   }
   .header-container {
-    text-align: left;
+    text-align: center;
   }
 }
 
